added create and send verify email
